<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
	  
	<item android:id="@+id/action_add"
		android:title="@string/action_add"
		android:orderInCategory="100"
		app:showAsAction="never"/>
	
    <item android:id="@+id/action_use_default"
          android:title="@string/action_use_default"
          android:orderInCategory="100"
          app:showAsAction="never"/>
	  
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="100"
          app:showAsAction="never"/>
	  
    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
