<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="15dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:layout_marginBottom="5dp"
              tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_add"
            android:hint="@string/add_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/add_btn_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_ok"
                android:text="@string/add_btn_ok"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>